refuse zone-transfer by default

--- a/named.conf
+++ b/named.conf
@@ -2,6 +2,7 @@ options {
         listen-on port 53 { any; };
         directory       "/var/named";
         allow-query     { any; };
+        allow-transfer { "none"; };
         recursion no;
 
         dnssec-enable yes;
